UserCode/mdk/.vscode/uv4.log
*** Using Compiler 'V6.21', folder: 'D:\Keil5\ARM\ARMCLANG\Bin'
Build target 'mm32f327x_g8p_project'
compiling zf_common_font.c...
compiling main.c...
compiling zf_driver_dma.c...
compiling zf_driver_pit.c...
compiling zf_driver_dac.c...
compiling zf_driver_delay.c...
compiling zf_common_function.c...
compiling zf_driver_gpio.c...
compiling zf_driver_flash.c...
compiling zf_driver_soft_iic.c...
compiling isr.c...
compiling zf_driver_iic.c...
compiling zf_common_debug.c...
compiling zf_driver_pwm.c...
compiling zf_driver_sdio.c...
compiling zf_common_clock.c...
compiling zf_driver_uart.c...
compiling zf_common_fifo.c...
compiling zf_driver_timer.c...
compiling zf_driver_adc.c...
compiling zf_driver_spi.c...
compiling zf_driver_exti.c...
compiling zf_common_interrupt.c...
compiling zf_device_absolute_encoder.c...
compiling zf_driver_encoder.c...
compiling zf_device_camera.c...
compiling zf_device_bluetooth_ch9141.c...
compiling zf_driver_soft_spi.c...
compiling zf_device_dl1a.c...
compiling zf_device_dm1xa.c...
compiling zf_device_gps_tau1201.c...
compiling zf_device_icm20602.c...
compiling zf_device_imu660ra.c...
compiling zf_device_imu963ra.c...
compiling zf_device_mpu6050.c...
compiling zf_device_key.c...
compiling zf_device_ips114.c...
compiling zf_device_ips200.c...
compiling zf_device_ov7725.c...
compiling zf_device_mt9v03x.c...
assembling startup_mm32f3277g.s...
compiling zf_device_type.c...
compiling zf_device_oled.c...
compiling zf_device_virtual_oscilloscope.c...
compiling zf_device_scc8660.c...
compiling zf_device_sdcard.c...
compiling zf_device_tsl1401.c...
compiling zf_device_tft180.c...
compiling system_mm32f3277g.c...
compiling zf_device_wifi_uart.c...
compiling zf_device_wireless_uart.c...
compiling hal_adc.c...
compiling hal_comp.c...
compiling hal_dma.c...
compiling hal_dac.c...
compiling hal_exti.c...
compiling hal_fsmc.c...
compiling hal_gpio.c...
compiling hal_iwdg.c...
compiling hal_i2c.c...
compiling hal_rcc.c...
compiling hal_rtc.c...
compiling hal_spi.c...
compiling hal_sdio.c...
compiling hal_syscfg.c...
compiling hal_tim_16b.c...
compiling hal_tim_32b.c...
compiling hal_tim_basic.c...
compiling hal_uart.c...
compiling hal_wwdg.c...
compiling hal_tim_adv.c...
compiling hal_usb.c...
compiling ffsystem.c...
compiling diskio.c...
compiling ffunicode.c...
compiling Motor.c...
compiling Encoder.c...
../Hardware/Sensor.c(82): error: expected expression
   82 |     double mapped_error = delta_yaw * MAPPING_FACTOR;
      |                                       ^
../Hardware/sensor.h(11): note: expanded from macro 'MAPPING_FACTOR'
   11 | #define MAPPING_FACTOR          ()
      |                                  ^
../Hardware/Sensor.c(111): error: call to undeclared function 'Sensor_GetError'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  111 |     if (Sensor_GetError() == 0) {
      |         ^
../Hardware/Sensor.c(111): note: did you mean 'Sensor_GetGyroError'?
../Hardware/Sensor.c(79): note: 'Sensor_GetGyroError' declared here
   79 | double Sensor_GetGyroError(void)
      |        ^
2 errors generated.
compiling Sensor.c...
compiling BuzzerAndLED.c...
compiling PID.c...
compiling Kfilter.c...
compiling menu.c...
compiling ff.c...
".\Objects\MM32F327X_G8P.axf" - 2 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:12
